--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-1-caching",
+  "name": "june-2025-offsite-demo-1-caching",
   "version": "0.1.0",
   "private": true,
   "scripts": {
