--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,7 +13,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
-    "next": "15.3.4",
+    "next": "^15.4.0-canary.104",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
