--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,12 +11,14 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^1.0.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
-    "next": "^15.4.0-canary.104",
+    "next": "^15.4.0-canary.107",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-geopattern": "^3.0.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
